--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://github.com/MikkoPlus/mesto-react",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
